@@ -1,9 +1,5 @@
-DIST gentoo-ru-0.09.gz 30483 RMD160 f16a263b8d8ebac8e5d6dbadb4aa4271e4138fdb SHA1 636c104b45d76e1b58bfae97124c90425b0826e6 SHA256 e3eb098580777bfdf10bd23991756887c4e6cd92ed000cddf9e6e0e1c6df12b9
-DIST gentoo-ru-0.10.gz 33801 RMD160 072b0ae9d26f2e187746e4af44fadddcb782b597 SHA1 79b259c22ecac80c31671214872480dcb28f2f8c SHA256 541245b9cf72164ce5ed0804a4ef8ca17c69b57a55fb19df2e0c8241779daecc
 DIST gentoo-ru-0.11.gz 36339 RMD160 371388630f8cc5aa98e5acebb21a54553eb69574 SHA1 b7a048c0d35cca85a2ce17eeab68e59319136186 SHA256 1bab2a5d97163de9159655f041dfb95f085660ee264fe579db62760f7037a936
-EBUILD fortune-mod-gentoo-ru-0.09.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
-EBUILD fortune-mod-gentoo-ru-0.10.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-0.11.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-9999.ebuild 637 RMD160 45bc00345eb1454a4092370d5b5818d13c4288eb SHA1 cbb8f3f113f14ee05186ea8c1f01c5b336e0817a SHA256 d29f3a08b1967811abacdf7b390da8863eee2f3d19570b5b21068d753554b099
-MISC ChangeLog 1984 RMD160 635b01c3e7cf4a88a2b9ba4d99b903789b0a090d SHA1 22cc2772384de9ed9d48da6621088063e26313bf SHA256 d2019af9c02291700fb919dd13ec1ebc272689aaa282692a55a828eb4c2b48cc
+MISC ChangeLog 2113 RMD160 452a3ea0fea67af45883fb7fb0c2f5ca18255d70 SHA1 4a94710e435116e5a723346468173449611d429c SHA256 268230d7a520c3bdc7c2c8dcb8cd89dc5e4188bfc0b8a979afe0a09618429d4f
 MISC metadata.xml 496 RMD160 20c1d96bc38fa9aa28ac23001c49f2e2cd59b0aa SHA1 475087d0baeff56b3c73066e51a947cf7dfbf4c5 SHA256 7e60b43f4827cd5e132de66d29cd94ca009ab5b3bf22b3279bdbcb12f57dd546
